fixing spacing

--- a/web/themes/custom/sfgovpl/src/sass/paragraphs/_paragraph-process-step.scss
+++ b/web/themes/custom/sfgovpl/src/sass/paragraphs/_paragraph-process-step.scss
@@ -80,7 +80,7 @@
     }
     .__text, p {
       margin: 0;
-      display: block;
+      display: inline;
     }
   }
   .step-optional {
